# mkndaq

./: .gitignore  LICENSE  README.md  __fidas-fallback__.py  __fidas__.py  __main-fallback__.py  __main__.py  __test__.py  __tests__.py  ae33.ipynb  ae33_fetch_data.ipynb  ae33_fetch_records.py  download_neph_logged_data.py  fidas-fallback.bat  fidas.bat  fidas.ipynb  find_serial_devices.py  find_serial_ports.py  hmp110.py  hmp110_ascii_scan.py  hmp110_modbus_scan.py  meteo_get_from_linuxbox.py  mkndaq-fallback.bat  mkndaq.bat  ne300.bat  ne300.ipynb  ne300.py  ne300_fetch.py  ne300_print_ssp_bssp.py  ne300_test.py  ne300_test_comms.py  neph.ipynb  neph_acoem.ipynb  neph_legacy.ipynb  network-monitor.ipynb  network-monitor.py  network_map.py  o3_comparison.ipynb  o3_comparison.yml  ozone_comparison.py  (+11 more)
.github/workflows/: codeql-analysis.yml
connect_device_package/: startme.ps1
mkndaq/: __main__.py  daqman.cfg  fidas.py  fidas_fallback.py  main.py  mkndaq.cfg  mkndaq.py  mkndaq_fallback.py  ozone_comparison.py  setup.py  tei49c_get_all.py  tei49i_get_all.py
mkndaq/inst/: ae33.py  (+14 more)
moxa-script/: VPN_connect.sh  config.py  crontab-bak  current_base.txt  getData.py  getData_MKN.py  iridium2.py  iridium3.py  purge.py  push_to_minix.sh  qct_MHS.py
scratch/: README.md  dcmp.py
tests/: ip_scanner.py  tcp_echo_server.py  test_linuxbox.py  test_meteo_integration.py  test_neph_integration.py  test_network_inventory.py  test_s3.py  test_s3_integration.py  test_sftp.py  tests.py  tst_aws_publish.py  tst_g2401_rsync.py  tst_paramiko.sftp.py  tst_serial_loopback.py  tst_sftp.py
(+67 files in other folders)
